# rag-dieta

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
app/: ingest.py  rag.py
