[project]
name = "rag-dieta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.13.2",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]
